hw05/kubernetes/app-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dach-hw05-app-deployment
  labels:
    app: dach-hw05-app
spec:
  replicas: 3
  selector:
    matchLabels:
      app: dach-hw05-app
  template:
    metadata:
      labels:
        app: dach-hw05-app
    spec:
      containers:
      - name: app
        image: dachdev/otus-architect:hw05-app
        ports:
          - containerPort: 8000
        livenessProbe:
          httpGet:
            port: 8000
            path: /
          initialDelaySeconds: 2
          periodSeconds: 5
          timeoutSeconds: 2
        readinessProbe:
          httpGet:
            port: 8000
            path: /health
          initialDelaySeconds: 2
          periodSeconds: 5
