hw05/kubernetes/db-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: dach-hw05-postgres
  labels:
    app: dach-hw05-postgres
spec:
  type: NodePort
  ports:
   - port: 5432
  selector:
    app: dach-hw05-postgres
