hw05/kubernetes/app-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: dach-hw05-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
  - host: arch.homework
    http:
      paths:
      - path: /otusapp/(.*)
        pathType: Prefix
        backend:
          serviceName: dach-hw05-app-service
          servicePort: 8000
